@@ -1,14 +1,17 @@
 package com.deep.framework.ast.declaration;
 
 import com.deep.framework.ast.Node;
+import com.deep.framework.ast.Stream;
 import com.deep.framework.ast.expression.Name;
 import com.deep.framework.ast.lexer.Token;
 import com.deep.framework.ast.lexer.TokenType;
+import com.deep.framework.ast.statement.BlockStatement;
 import com.deep.framework.ast.statement.Statement;
 import com.deep.framework.ast.type.Type;
 import lombok.Data;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Data
@@ -22,17 +25,19 @@ public class FieldDeclaration extends Declaration {
     }
 
     public static void parser(Node node) {
-        if (node instanceof MethodDeclaration) return;
-        List.copyOf(node.getChildrens()).stream().map(a -> (Node) a).forEach((a) -> {
-            if (a instanceof Statement) {
-                FieldDeclaration fieldDeclare = new FieldDeclaration(node.getPrarent());
-                List<TokenType> modifiers = a.getChildrens().stream().filter(e -> Field_Modifiers.contains(e)).map(o -> ((Token) o).getTokenType()).collect(Collectors.toList());
-                a.getChildrens().removeAll(modifiers);
+        if (node instanceof FieldDeclaration) return;
+        Stream.of(node.getChildrens()).reduce((list, a, b) -> {
+            if (!(b instanceof BlockStatement)) {
+                if (a instanceof Statement) {
+                    FieldDeclaration declare = new FieldDeclaration(node.getPrarent());
+                    List<Node> modifiers = a.getChildrens().stream().filter(e -> Objects.nonNull(e.getTokenType()) && Field_Modifiers.contains(e.getTokenType())).toList();
+                    a.getChildrens().removeAll(modifiers);
 
-                fieldDeclare.setModifiers(modifiers);
-                fieldDeclare.setType(new Type((Name) a.getChildrens().stream().findFirst().get()));
-                fieldDeclare.setChildrens(a.getChildrens());
-                node.replace(a, fieldDeclare);
+                    declare.setModifiers(modifiers.stream().map(Token::getTokenType).collect(Collectors.toList()));
+                    declare.setType(new Type((Name) a.getChildrens().stream().findFirst().get()));
+                    declare.setChildrens(a.getChildrens());
+                    node.replace(a, declare);
+                }
             }
         });
     }
